form study on learn.js - editable div and shortcut, but without reuse

--- a/formLearn/index.html
+++ b/formLearn/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="container">
+      <h2>Task 1 and 2 (3 - mouse)</h2>
       <form action="">
         <select>
           <option value="Rock">Рок</option>
@@ -15,6 +16,8 @@
         </select>
         <input type='email' class="for-placeholder" placeholder="E-mail" data-placeholder="email">
       </form>
+      <h2></h2>
+      <div id='field' class='field'></div>
     </div>
     <script src="main.js"></script>
   </body>
