troubles with form study - put aside before end of keyboard events

--- a/formLearn/index.html
+++ b/formLearn/index.html
@@ -16,8 +16,12 @@
         </select>
         <input type='email' class="for-placeholder" placeholder="E-mail" data-placeholder="email">
       </form>
-      <h2></h2>
+      <h2>Tash 4</h2>
       <div id='field' class='field'></div>
+      <h2>Task 5</h2>
+      Введите текст(например, пароль) с нажатым CapsLock:
+      <input type="text" id="caps-exp"/>
+      <div style="display:none;color:red" id="capsIndicator">Внимание: нажат CapsLock!</div>
     </div>
     <script src="main.js"></script>
   </body>
