solve the problem with caps on for typing in text-input

--- a/formLearn/index.html
+++ b/formLearn/index.html
@@ -21,7 +21,7 @@
       <h2>Task 5</h2>
       Введите текст(например, пароль) с нажатым CapsLock:
       <input type="text" id="caps-exp"/>
-      <div style="display:none;color:red" id="capsIndicator">Внимание: нажат CapsLock!</div>
+      <div id="capsIndicator">Внимание: нажат CapsLock!</div>
     </div>
     <script src="main.js"></script>
   </body>
