first-level-angular - stack with adding next level of tree, have some ideas how to solve

--- a/firstLevelAngular/index.html
+++ b/firstLevelAngular/index.html
@@ -28,5 +28,16 @@
       <span class="hideForm" ng-click="removeFlag()">[x]</span>
     </form>
 
+
+  <!-- this is for second level
+  <ul ng-show="secondLevelFlag">
+    <li ng-repeat="listItemSecond in listSecond">
+      {{listItemSecond.text}}
+      <span ng-click="addFlag()">[+]</span>
+      <span ng-click="hidePhrase()">[x]</span>
+    </li>
+  </ul> -->
+
+
   </body>
 </html>
