--- a/parus/index.html
+++ b/parus/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--  TODO: change font for inner docs -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|PT+Sans|PT+Serif" rel="stylesheet">
-    <link rel="stylesheet" href="css/src/notmalize.css">
+    <link rel="stylesheet" href="css/src/normalize.css">
     <link rel="stylesheet" href="css/src/style.css">
     <title>test</title>
   </head>
@@ -30,14 +30,19 @@
         </ul>
       </nav>
     </header>
+
     <section id="first-screen">
       <h1>Неделя НАСТОЯЩИХ МОРСКИХ ПРИКЛЮЧЕНИЙ</h1>
       <span>за €399</span>
       <div>for line</div>
       <p>29 апреля - 6 мая</p>
       <p>на парусной яхте по островам Греции!</p>
+      <div class="wrapper">
       <button>Оставить заявку</button>
       <button>Другие даты</button>
+      </div>
     </section>
+
+
   </body>
 </html>
