--- a/parus/index.html
+++ b/parus/index.html
@@ -6,6 +6,8 @@
     <!--  TODO: change font for inner docs -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|PT+Sans|PT+Serif" rel="stylesheet">
     <link rel="stylesheet" href="css/src/normalize.css">
+    <link rel="stylesheet" href="css/src/slick.css">
+    <link rel="stylesheet" href="css/src/slick-theme.css">
     <link rel="stylesheet" href="css/src/style.css">
     <title>test</title>
   </head>
@@ -43,6 +45,30 @@
       </div>
     </section>
 
+    <section id="yaht">
+       <div class="wrapper">
+        <div>линия</div>
+        <h2>На яхте</h2>
+        <div>линия</div>
+      </div>
+      <div class="yaht-carousel">
+        <div>
+          <img src="img/carousel-item1.jpg">
+        </div>
+        <div>
+          <img class="yaht-img" src="img/carousel-item4.png">
+        </div>
+        <div>
+          <img src="img/carousel-item3.jpg">
+          </div>      
+      </div>
+      <!-- text in a part of carousel too -->
+      <p>Идеальное пространство для Комфортного Путешествия!</p>
+    </section>
 
+      <script src="js/libs/jquery.min.js"></script>
+      <script src="js/src/menu.js"></script>
+      <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
+      <script src="js/src/yachtCarousel.js"></script>
   </body>
 </html>
