parusProject - add route-section and contacts withs styles and markdown for footer

--- a/parus/index.html
+++ b/parus/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -48,7 +48,7 @@
     <section id="yaht">
        <div class="wrapper">
         <div>линия</div>
-        <h2>На яхте</h2>
+        <h3>На яхте</h3>
         <div>линия</div>
       </div>
       <div class="yaht-carousel">
@@ -65,6 +65,106 @@
       <!-- text in a part of carousel too -->
       <p>Идеальное пространство для Комфортного Путешествия!</p>
     </section>
+
+    <section id="route">
+      <div class="header">
+        <div>линия</div>
+        <h3>Маршрут</h3>
+        <div>линия</div>
+      </div>
+
+      <div class="route-item">
+        <img src="img/route-athens.jpg" alt="Афины">
+        <h2>Афины</h2>
+        <p>
+          Обязательно стоит взойти к Акрополю, порадоваться затейливой смене караула у Парламента, побродить у сувенирных лавок на площади Монастираки и отыскать одну из уютных кофеен, с "грик кофи" (не вздумайте назвать его по-турецки ;) и представить рядышком Аристотеля.
+        </p>
+      </div>
+
+      <div class="route-item">
+        <img src="img/route-aegina.jpg" alt="Эгина">
+        <h2>Эгина</h2>
+        <p>
+          Главная достопримечательность острова - Храм Афайи, один из трёх величайших храмов Древней Греции. А еще древний миф гласит, что первыми жителями острова Эгина были муравьи, превращённые Зевсом в людей. Трудолюбивые муравьи превратили остров в фисташковую столицу :) Здешние фисташки волшебны!
+           </p>
+      </div>
+
+       <div class="route-item">
+        <img src="img/route-methana.jpg" alt="Метана">
+        <h2>Метана</h2>
+        <p>
+          Всегда теплые термальные воды из-за действующего вулкана, на который совершенно необходимо взобраться, Ландшафт застывшей вулканической лавы поистине прекрасен, идеальная Йога-набережная и совсем рядышком необитаемый остров-малыш Мони, где живут ручные олени и павлины! Возьмите с собой немного хлеба и красивая фоточка Вам гарантирована!
+           </p>
+      </div>
+
+      <div class="route-item">
+        <img src="img/route-paros.jpg" alt="Парос">
+        <h2>Парос</h2>
+        <p>
+          Остров тысячи яхт! Из-за удобного пролива вы всегда встретите на Поросе тысячи яхтсменов из разных уголков земли. Настоящая часовня с боем и красивая церквушка на горе с видом одновременно и на запад и на восток! Еще здесь есть ночные клубы и бильярд. Развалины форта русских моряков, красивые пляжи, велосипеды напрокат.
+        </p>
+      </div>
+
+       <div class="route-item">
+        <img src="img/route-idra.jpg" alt="Идра">
+        <h2>Идра</h2>
+        <p>
+          Остров давший грекам больше всех Адмиралов во время войны за независимость. Даже сейчас гавань это настоящая Крепость ощетинившаяся пушками. На Идре запрещены совершенно любые механические средства передвижения! Поэтому здесь ослики возят всё :) На этом острове находится гора Эрос, а на пути к ней Монастырь, где можно угоститься лукумом сделанным монахами. 
+        </p>
+      </div>
+
+       <div class="route-item">
+        <img src="img/route-spetses.jpg" alt="Спецес">
+        <h2>Спецес</h2>
+        <p>
+          Остров шикарных вилл и пляжей. Самый зеленый из местных островов по которому можно прокатиться взяв в аренду квадрики. Огромный работающий маяк в парке украшенном современными скульптурами и просто памятниками. А самое главное - пляжи! Пляжи окружают остров со всех сторон: Передайз, Кайики, Козунос и у каждого рейтинг 5+ на TripAdvisor!
+         </p>
+      </div>
+
+      <button>Маршрут на Google maps</button>
+    </section>
+
+    <section id="contacts">
+      <div class="header">
+         <div>линия</div>
+        <h3>Контакты</h3>
+        <div>линия</div>
+      </div>
+      <div class="phone contact">
+        +380 (12) 345 67 67
+      </div>
+      <div class="email contact">
+        parusProject@gmail.com
+      </div>
+      <div class="socials-wrapper">
+        <a href="#">Вконтакте</a>
+        <a href="#">facebook</a>
+        <a href="#">instagram</a>
+      </div>
+    </section>
+
+    <footer>
+      <div class="header">
+        <div>линия</div>
+        <h3>Поднять паруса!</h3>
+        <div>линия</div>
+      </div>
+      <p>Что вы думаете о нашем предложении?</p>
+      <form>
+        <label for="conversion">
+        <input type="checkbox" id="conversion">Хочу! я в команде!
+        </label>
+        <label for="wrong-dates">
+        <input type="checkbox" id="wrong-dates">Хочу, но в другие даты.
+        </label>
+        <label for="questions">
+        <input type="checkbox" id="questions">Недостаточно данных, у меня остались вопросы
+        </label>
+        <input type="text" placeholder="Телефон в формате +380 (12) 345 67 67">
+        <input type="text" placeholder="Ваше имя">
+        <button type="submit">к приключениям!</button>
+      </form>
+    </footer>
 
       <script src="js/libs/jquery.min.js"></script>
       <script src="js/src/menu.js"></script>
