nakitel - add content section (70%), stylized footer

--- a/nakitelTest/index.html
+++ b/nakitelTest/index.html
@@ -9,6 +9,7 @@
     <title>Nakitel</title>
   </head>
   <body>
+
     <header>
       <div class="wrapper">
       <div class="menu-icon">
@@ -34,6 +35,7 @@
       <input type="text" placeholder="Поиск">
     </div>
     </header>
+
     <main>
       <section id="first">
         <div class="upper">
@@ -101,12 +103,43 @@
         test1
       </section>
       <section id="content">
-        test2
+        <h1>О компании</h1>
+        <div class="wrapper">
+          <nav>
+            <ul>
+              <li><a href="#">Главная</a></li>
+              <li><a class="active" href="#">О компании</a></li>
+              <li><a href="#">Каталог продукции</a></li>
+              <li><a href="#">Оплата / Доставка</a></li>
+              <li><a href="#">Гарантия</a></li>
+              <li><a href="#">Контакты</a></li>
+            </ul>
+          </nav>
+        <article>
+          <p>Повседневная практика показывает, что постоянный количественный рост и сфера нашей активности позволяет оценить значение существенных финансовых и административных условий. Значимость этих проблем настолько очевидна, что консультация с широким активом представляет собой интересный эксперимент проверки направлений прогрессивного развития.</p>
+          <p>Идейные соображения высшего порядка, а также сложившаяся структура организации влечет за собой процесс внедрения и модернизации системы обучения кадров, соответствует насущным потребностям.</p>
+          <p>Таким образом сложившаяся структура организации требуют определения и уточнения направлений прогрессивного развития. С другой стороны сложившаяся структура организации способствует подготовки и реализации системы обучения кадров, соответствует насущным потребностям. Значимость этих проблем настолько очевидна, что укрепление и развитие структуры влечет за собой процесс внедрения и модернизации соответствующий условий активизации.</p>
+          <p>С другой стороны начало повседневной работы по формированию позиции позволяет оценить значение дальнейших направлений развития. Идейные соображения высшего порядка, а также реализация намеченных плановых заданий влечет за собой процесс внедрения и модернизации позиций, занимаемых участниками в отношении поставленных задач. С другой стороны начало повседневной работы по формированию позиции представляет собой интересный эксперимент проверки новых предложений. Равным образом рамки и место обучения кадров в значительной степени обуславливает создание системы обучения кадров, соответствует насущным потребностям.</p>
+          <p>Повседневная практика показывает, что дальнейшее развитие различных форм деятельности в значительной степени обуславливает создание системы обучения кадров, соответствует насущным потребностям. Не следует, однако забывать, что рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании модели развития.</p>
+          <p>Товарищи! начало повседневной работы по формированию позиции позволяет выполнять важные задания по разработке систем массовогоу частия.</p>
+        </article>
+        <div>для баннеров</div>
+        </div>
       </section>
+
       <footer>
         <section class="footer-tape">
           <div class="wrapper">
-            test3
+            <span>Nakitel ©2014</span>
+            <nav>
+              <ul>
+                <li><a href="#">Контакты</a></li>
+                <li><a href="#">Акции</a></li>
+                <li><a href="#">Каталог</a></li>
+                <li><a href="#">Оплата / Доставка</a></li>
+                <li><a href="#">Гарантия</a></li>
+              </ul>
+            </nav>
           </div>
         </section>
       </footer>
