nakitel - add aside panel and carousel

--- a/nakitelTest/index.html
+++ b/nakitelTest/index.html
@@ -99,9 +99,27 @@
 
         </div>
       </section>
+
+<!-- have some troubles with dots and shadows -->
       <section id="carousel">
-        test1
+        <div class="slider js_slider">
+                <div class="frame js_frame">
+                    <ul class="slides js_slides">
+                        <li class="js_slide item1"></li>
+                        <li class="js_slide item2"></li>
+                        <li class="js_slide item3"></li>
+                    </ul>
+                </div>
+                <span class="js_prev prev">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 501.5 501.5"><g><path fill="#2E435A" d="M302.67 90.877l55.77 55.508L254.575 250.75 358.44 355.116l-55.77 55.506L143.56 250.75z"/></g></svg>
+                </span>
+                <span class="js_next next">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 501.5 501.5"><g><path fill="#2E435A" d="M199.33 410.622l-55.77-55.508L247.425 250.75 143.56 146.384l55.77-55.507L358.44 250.75z"/></g></svg>
+                </span>
+            </div>
+            <!-- <div class="js_simple_dots"></div> -->
       </section>
+
       <section id="content">
         <h1>О компании</h1>
         <div class="wrapper">
@@ -123,7 +141,22 @@
           <p>Повседневная практика показывает, что дальнейшее развитие различных форм деятельности в значительной степени обуславливает создание системы обучения кадров, соответствует насущным потребностям. Не следует, однако забывать, что рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании модели развития.</p>
           <p>Товарищи! начало повседневной работы по формированию позиции позволяет выполнять важные задания по разработке систем массовогоу частия.</p>
         </article>
-        <div>для баннеров</div>
+        <aside class="banners">
+          <div class="call">
+            <p>Телефон горячей линии</p>
+            <p>+12(034) 567 89 10</p>
+            <p>(пн.- пт. с 9.00 до 18.00)</p>
+            <button><span>Вызвать</span> замерщика</button>
+          </div>
+          <div class="banner"></div>
+          <div class="call">
+            <p>Телефон горячей линии</p>
+            <p>+12(034) 567 89 10</p>
+            <p>(пн.- пт. с 9.00 до 18.00)</p>
+            <button><span>Вызвать</span> замерщика</button>
+          </div>
+          <div class="banner"></div>
+        </aside>
         </div>
       </section>
 
@@ -144,5 +177,7 @@
         </section>
       </footer>
     </main>
+    <script src="js/lib/lory.min.js"></script>
+    <script src="js/src/carousel.js"></script>
   </body>
 </html>
