nakitel add some noise, change fixed article bg for css-one, add nav in header

--- a/nakitelTest/index.html
+++ b/nakitelTest/index.html
@@ -15,15 +15,13 @@
       <div class="menu-icon">
         <div></div>
       </div>
-      <nav>
+      <nav class="header-nav">
         <ul>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
+          <li><a href="#">Контакты</a></li>
+          <li><a href="#">Акции</a></li>
+          <li><a href="#">Каталог</a></li>
+          <li><a href="#">Оплата / Доставка</a></li>
+          <li><a href="#">Гарантия</a></li>
         </ul>
       </nav>
       <div class="cart">
@@ -177,6 +175,7 @@
         </section>
       </footer>
     </main>
+    <script src="js/src/menu.js"></script>
     <script src="js/lib/lory.min.js"></script>
     <script src="js/src/carousel.js"></script>
   </body>
