Nakitel - ready for review

--- a/nakitelTest/index.html
+++ b/nakitelTest/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/src/normalize.css">
     <link rel="stylesheet" href="css/src/fonts.css">
-    <link rel="stylesheet" href="css/src/style.css">
+    <link rel="stylesheet" href="css/build/style.min.css">
     <title>Nakitel</title>
   </head>
   <body>
@@ -172,11 +172,8 @@
       </footer>
     </main>
 
-    <script src="js/src/menu.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <!-- <script src="js/lib/jcarousel.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jcarousel/0.3.5/jquery.jcarousel.js"></script>
-    <script src="js/src/carousel.js"></script>
-    <!-- <script src="js/lib/lory.min.js"></script> -->
+    <script src="js/build/build.min.js"></script>
   </body>
 </html>
