makeTest - add creating a copy of class Test and saving to localStorage

--- a/makeTest/index.html
+++ b/makeTest/index.html
@@ -4,7 +4,8 @@
                  <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Create test with OOP and js</title>
     <style>
-            form {
+            form, 
+            .answer-wrapper {
                     display: flex;
                     flex-direction: column;
             }
@@ -29,6 +30,7 @@
                                 <input type="number" id="qNumber" value="1">number of answers</label>
                                <div class="answer-wrapper"></div>
                                <button type="button">create question</button>
+                               <button type="button" id="forPrint">console.log question</button>
                         </form>
                 </div>
                 <script src="dom.js"></script>
