--- a/makeTest/index.html
+++ b/makeTest/index.html
@@ -31,6 +31,7 @@
                                <div class="answer-wrapper"></div>
                                <button type="button">create question</button>
                                <button type="button" id="forPrint">console.log question</button>
+                               <button type="button" id="cleaner">clean localStorage</button>
                         </form>
                 </div>
                 <script src="dom.js"></script>
