pingbuller - add basic greed and some content for 320, 768 and 960px

--- a/ping/index.html
+++ b/ping/index.html
@@ -1,20 +1,140 @@
 <!DOCTYPE html>
-<html lang="eu">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="build/lib/reset.css">
+    <link rel="stylesheet" href="build/lib/normalize.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="build/css/style.min.css">
     <title>Pingbuller</title>
   </head>
   <body>
-  <header class="container-fluid"></header>
-  <main class="container-fluid"></main>
+  <header class="container-fluid">
+    <div class="wrapper-header">
+      <a class="logo" href="#">logotype
+        <img src="img/logo.png" alt="logotype">
+      </a>
+      <nav class="main-nav header-nav">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Products</a></li>
+          <li><a href="#">Lorem ipsum</a></li>
+          <li><a href="#">Dolor set amet</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main class="container-fluid">
+      <section class="slider">
+        <div class="wrapper-header">
+          <div class="heading">
+            <h1>Lorem Ipsum Dolor</h1>
+            <h2>IT WILL MAKE ALL OF YOUR DREAMS COME</h2> 
+          </div>
+          <p class="text"></p>
+          <div class="img-container"></div>
+        </div>
+      </section>
+
+      <section class="about">
+        <div class="row wrapper-about">
+          <article class="col-sm-4">
+            <h3>ABOUT OUR COMPANY</h3>
+            <p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus<span class="hidden-xs">ultrices posuere. Pellentesque vel lacus</span><span class="hidden-xs hidden-sm"> eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl. Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu. Suspendisse quis mauris non ligula rutrum faucibus eu quis odio. Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.</span></p>
+            <a href="#">READ MORE</a>
+          </article>
+          <article class="col-sm-4">
+            <h3>ABOUT OUR COMPANY</h3>
+            <p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus<span class="hidden-xs"> ultrices posuere. Pellentesque vel lacus</span><span class="hidden-xs hidden-sm">eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl. Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu. Suspendisse quis mauris non ligula rutrum faucibus eu quis odio. Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.</span></p>
+            <a href="#">READ MORE</a>
+          </article>
+          <article class="col-sm-4">
+            <h3>ABOUT OUR COMPANY</h3>
+            <p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus<span class="hidden-xs"> ultrices posuere. Pellentesque vel lacus</span> <span class="hidden-xs hidden-sm">eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl. Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu. Suspendisse quis mauris non ligula rutrum faucibus eu quis odio. Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.</span></p>
+            <a href="#">READ MORE</a>
+          </article>
+        </div>
+      </section>
+
+      <section class="content">
+        <div class="wrapper-content row">
+          <div class="review col-sm-6">
+            <p>PingbulLer</p>
+            <p>starts here</p>
+            <p>
+              “Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae
+               <span class="hidden-xs">lectus eu libero pellentesque pulvinar</span>
+              <span class="hidden-xs hidden-sm">urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.”
+ Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu. Suspendisse quis mauris non ligula rutrum faucibus eu quis odio. Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.
+              </span></p>
+          </div>
+
+          <div class="articles col-sm-6">
+            <h2>RECENT UPDATES</h2>
+            <article>
+              <h4>Nunc turpis neque feugiat eget </h4>
+              <p>Posted by Admin on March 13 2012 </p>
+            </article>
+            <article>
+              <h4>Nunc turpis neque feugiat eget </h4>
+              <p>Posted by Admin on March 13 2012 </p>
+            </article>
+            <article>
+              <h4>Nunc turpis neque feugiat eget </h4>
+              <p>Posted by Admin on March 13 2012 </p>
+            </article>
+            <a href="#">MORE BLOG POSTS</a>
+          </div>
+        </div>
+
+          <div class="logos">
+            <ul>
+              <li>img</li>
+              <li>img</li>
+              <li>img</li>
+              <li>img</li>
+              <li>img</li>
+              <li>img</li>
+            </ul>
+          </div>
+      </section>
+
+      <section class="categories">
+        <div class="row wrapper-categories">
+          <article class="col-sm-4">
+            <h3>NEWS CATEGORIES</h3>
+            <p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque <span class="hidden-xs hidden-sm">pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl. Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu. Suspendisse quis mauris non ligula rutrum faucibus eu quis odio. Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.</span></p>
+          </article>
+          <article class="col-sm-4">
+            <h3>NEWS CATEGORIES</h3>
+            <p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque <span class="hidden-xs hidden-sm">pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl. Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu. Suspendisse quis mauris non ligula rutrum faucibus eu quis odio. Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.</span></p>
+          </article>
+          <article class="col-sm-4">
+            <h3>NEWS CATEGORIES</h3>
+            <p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque <span class="hidden-xs hidden-sm">pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl. Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu. Suspendisse quis mauris non ligula rutrum faucibus eu quis odio. Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.</span></p>
+          </article>
+        </div>
+      </section>
+  </main>
+
   <footer class="container-fluid">
-    <div class="row">
-      <div class="col-xs-4 red">red</div>
-      <div class="col-xs-8 blue">blue</div>
+    <div class="wrapper-footer">
+    <nav class="main-nav footer-nav">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">Lorem ipsum</a></li>
+            <li><a href="#">Dolor set amet</a></li>
+        </ul>
+    </nav>
+    <p class="copyright">
+      Designed by <b>Pingbull AS</b>
+    </p>
     </div>
   </footer>
   </body>
