ping - add bg-img, styles for menu for 320,480, some icons and some padding/margin troubles on right-side

--- a/ping/index.html
+++ b/ping/index.html
@@ -29,13 +29,15 @@
 
   <main class="container-fluid">
       <section class="slider">
-        <div class="wrapper-header">
+        <div class="wrapper-slider">
+          <div id="slider-top">
           <div class="heading">
             <h1>Lorem Ipsum Dolor</h1>
             <h2>IT WILL MAKE ALL OF YOUR DREAMS COME</h2> 
           </div>
           <p class="text"></p>
           <div class="img-container"></div>
+        </div>
         </div>
       </section>
 
