pingbuller - add some styling for content and some horizontal-scrool-problems on 768, 960px viewport

--- a/ping/index.html
+++ b/ping/index.html
@@ -63,9 +63,9 @@
 
       <section class="content">
         <div class="wrapper-content row">
-          <div class="review col-sm-6">
-            <p>PingbulLer</p>
-            <p>starts here</p>
+          <div class="review col-sm-5">
+            <p class="title">PingbulLer</p>
+            <p class="title">starts here</p>
             <p>
               “Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae
                <span class="hidden-xs">lectus eu libero pellentesque pulvinar</span>
@@ -74,19 +74,19 @@
               </span></p>
           </div>
 
-          <div class="articles col-sm-6">
+          <div class="articles col-sm-6 col-sm-offset-1">
             <h2>RECENT UPDATES</h2>
             <article>
-              <h4>Nunc turpis neque feugiat eget </h4>
-              <p>Posted by Admin on March 13 2012 </p>
+              <h4>Nunc turpis neque <span class="hidden-xs">feugiat eget</span></h4>
+              <p>Posted by Admin on March 13 <span class="hidden-xs">2012</span></p>
             </article>
             <article>
-              <h4>Nunc turpis neque feugiat eget </h4>
-              <p>Posted by Admin on March 13 2012 </p>
+              <h4>Nunc turpis neque <span class="hidden-xs">feugiat eget</span></h4>
+              <p>Posted by Admin on March 13 <span class="hidden-xs">2012</span></p>
             </article>
             <article>
-              <h4>Nunc turpis neque feugiat eget </h4>
-              <p>Posted by Admin on March 13 2012 </p>
+              <h4>Nunc turpis neque <span class="hidden-xs">feugiat eget</span></h4>
+              <p>Posted by Admin on March 13 <span class="hidden-xs">2012</span></p>
             </article>
             <a href="#">MORE BLOG POSTS</a>
           </div>
